update style contact form

--- a/style.css
+++ b/style.css
@@ -412,24 +412,28 @@ input{
 input, textarea{
     margin: .5rem;
     width: 30rem;
-    
+    background-color: #1e242c;
     border-radius: 2px;
     border: none;
-    padding: 0 1rem;
+    padding: .5rem 1rem;
+    color: #fff;
     
 }
 
 .body-btn{
     font-size: 1.5rem;
-    color: var(--secondary-font-color);
-    border: 1px solid #fff;
+    color: #fff;
+  border: none;
     border-radius: 2px;
-    padding: 2px 10px;
+    padding: 5px 15px;
     margin-top: 1rem;
+    background-color: #1e242c;
+    
     
 }
 .body-btn:hover{
     background-color: #fff;
+    color: #000;
 
 }
 
