--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ font-family: 'Roboto Slab', serif; */
 /* 252934  00ccff */
 html{
     font-family: var(--body-font);
-    font-size: 10px;
+    font-size: 8px;
     color: var(--body-font-color);
     scroll-behavior: smooth;
 }
@@ -165,7 +165,7 @@ header{
 
 
 h1{
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     color: var(--main-font-color-light);
     font-weight: 400;
     line-height: .9;
@@ -241,20 +241,33 @@ h1{
     }
 }
 
+@keyframes up {
+    0%{
+        opacity: 0;
+    }
+    50%{
+       opacity: 1;
+    }
+    100%{
+        opacity:0;
+        transform: translateY(-1rem);
+    }
+}
+
 .sub-headline{
     color: var(--secondary-font-color);
-    font-size: 4.5rem;
+    font-size: 3rem;
     font-family: var(--main-font);
     text-shadow: 1px 1px 1px #fff;
 }
 
 .sub-headline p::first-letter{
-    font-size: 7rem;
+    font-size: 5rem;
 }
 
 .headline{
     color: var(--main-font-color-dark);
-    font-size: 3rem;
+    font-size: 2rem;
     letter-spacing: .7rem;
     margin-right: -.7rem;
     text-transform: uppercase;
@@ -272,7 +285,7 @@ h1{
 .separator{
     color: var(--secondary-font-color);
     margin: 2.4rem 0;
-    font-size: 2rem;
+    font-size: 1.5rem;
     /* text-shadow: 1px 1px 1px #fff; */
 }
 
@@ -286,27 +299,23 @@ h1{
 
 .about-me p{
     line-height: 1.2;
-    /* margin-bottom: 2.4rem; */
 }
 
 
 
 .my-skills{
-    /* text-align: center; */
     display: grid;
     grid-template-columns: repeat(2,1fr);
     justify-items: center;
     gap: 2rem;
 }
 
-
-
 .skill-box{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 15rem;
-   height: 20rem;
+    width: 10rem;
+   height: 17rem;
    border-radius: 10px;    
     background-color: var(--main-font-color-dark)  ;
     box-shadow:#000 5px 5px 2px;
@@ -319,7 +328,7 @@ h1{
 
 .emphasize{
     color: #fff;
-    font-size: 2rem;
+    font-size: 1.5rem;
     ;
 }
 
@@ -385,16 +394,40 @@ section:nth-child(6){
     filter: grayscale(0%);
 }
 
+
+
 .contact{
     background-color: var(--main-font-color-dark);
+    position: relative;
 }
 .contact p{
 color: aliceblue;
 text-align: center;
+
 }
 
 /* Form */
 
+
+.back-to-top{
+    width: 5rem;
+    height: 5rem;   
+    background-color:var(--body-font-color);
+    position: absolute;
+    left: 50%;
+    top: -2rem;
+    transform: translateX(-50%);
+    border-radius: 50%;
+
+}
+
+.back-to-top i{
+    color: #fff;
+    display: block;
+    font-size: 1.5rem;
+    padding: 1.5rem 1.85rem;
+    animation: up 2s infinite;
+}
 
 .form{
     display: flex;
@@ -427,19 +460,16 @@ input, textarea{
     border-radius: 2px;
     padding: 5px 15px;
     margin-top: 1rem;
-    background-color: #1e242c;
-    
-    
+    background-color: #1e242c;    
 }
 .body-btn:hover{
     background-color: #fff;
     color: #000;
-
 }
 
 .social-group{
     display: flex;
-    /* flex-direction: row; */
+    
     justify-content: center;
 
 }
@@ -450,7 +480,10 @@ input, textarea{
     padding: 2rem 1rem;
 }
 
-@media screen and (min-width: 900px){
+
+
+
+ @media screen and (min-width: 900px){
     
     .menu-toggle{
         display: none;
@@ -472,7 +505,6 @@ input, textarea{
     }
 
     .nav-item{
-        /* margin-left: 0 2.4rem; */
         margin: 0 2.4rem;
         border: none;
         border-bottom: 1.5px solid #fff;
@@ -503,4 +535,8 @@ input, textarea{
         padding-right: 7rem;
     }
 
-}
+    .skill-box{
+       width: 15rem;
+       height: 20rem;
+    }
+} 
