fix misc and add animation

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ font-family: 'Roboto Slab', serif; */
 /* 252934  00ccff */
 html{
     font-family: var(--body-font);
-    font-size: 8px;
+    font-size: 10px;
     color: var(--body-font-color);
     scroll-behavior: smooth;
 }
@@ -254,20 +254,42 @@ h1{
     }
 }
 
+@keyframes slideLeft {
+   from{
+        opacity: 0;
+    }
+    
+    to{
+        opacity:1;
+        transform: translateX(0rem);
+    }
+}
+
+@keyframes slideRight {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity:1;
+        transform: translateX(0rem);
+    }
+}
+
+
 .sub-headline{
     color: var(--secondary-font-color);
-    font-size: 3rem;
+    font-size: 4.5rem;
     font-family: var(--main-font);
     text-shadow: 1px 1px 1px #fff;
 }
 
 .sub-headline p::first-letter{
-    font-size: 5rem;
+    font-size: 7rem;
 }
 
 .headline{
     color: var(--main-font-color-dark);
-    font-size: 2rem;
+    font-size: 3rem;
     letter-spacing: .7rem;
     margin-right: -.7rem;
     text-transform: uppercase;
@@ -275,18 +297,13 @@ h1{
 
 .global-headline{
     text-align: center;
-    /* margin-top: 0.9rem; */
 }
 
-.discover-my-story .global-headline{
-    /* margin-top: 0.9rem; */
-}
 
 .separator{
     color: var(--secondary-font-color);
     margin: 2.4rem 0;
-    font-size: 1.5rem;
-    /* text-shadow: 1px 1px 1px #fff; */
+    font-size: 2rem;
 }
 
 .my-info{
@@ -368,9 +385,7 @@ section:nth-child(6){
    
 }
 .project-item{
-    margin: 0 1rem;
-   
-    
+    margin: 0 1rem;    
 }
 
 .my-project-grid h3{
